--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t digsim/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run digism/react-test npm test -- --coverage
+  - docker run digism/react-test npm run test -- --coverage
 
 after_success:
   - docker build -t digsim/multi-client ./client
