--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - docker build -t digsim/react-test -f ./client/Dockerfile.dev ./client
 
-scripts:
+script:
   - docker run digism/react-test npm run test -- --coverage
 
 after_success:
